# wordle-helper

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  cli.py  docker-compose.yml  docker-entrypoint.sh  env-example  main.py  pyproject.toml  pyproject.toml.old
cron/: wordle.cron
data/: app.db  used_words.json
static/css/: main.css
static/js/: solver.js
templates/: _results.html  base.html  login.html  readme.html  register.html  solve.html
